--- a/app/index.html
+++ b/app/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-</head>
-<body>
-  <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
-  </ul>
+<html ng-app="ventureApp">
+    <head>
+        <meta charset="utf-8">
+        <title>Venture Hacks 2016</title>
+        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+    </head>
+    <body>
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+        <div id="main" class="container" ng-controller="houndTweetController">
+            <div class="span12 text-center">
+                <section ng-show="!isRecording">
+                    <button class="btn btn-primary btn-lg" ng-model="isRecording" uib-btn-checkbox
+                            uib-checkbox-false="0" uib-checkbox-true="1" ng-click="startStopVoiceSearch()">
+                        <i class="glyphicon glyphicon-record"></i>
+                    </button>
+                </section>
 
-  <div ng-view></div>
+                <section id="tweetInput" class="container" ng-show="isRecording">
+                    <div class="span12">
+                        <form class="form-group">
+                            <textarea id="voiceInput" type="text" class="form-control" ng-model="tweet"></textarea>
+                        </form>
+                        <uib-progressbar max="140" value="tweet.length" type="{{progressType()}}">
+                            <span>{{tweet.length}} / 140</span>
+                        </uib-progressbar>
+                    </div>
+                </section>
+            </div>
+        </div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
-</body>
+        <!-- The main -->
+        <script src="bower_components/angular/angular.min.js"></script>
+        <!-- Requirements for angular ui bootstrap -->
+        <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+        <script src="bower_components/angular-touch/angular-touch.min.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <!-- Houndify -->
+        <script src="bower_components/houndify-web-sdk.min/index.js"></script>
+        <!-- Our app's logic -->
+        <script src="app.js"></script>
+    </body>
 </html>
