--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ventureApp">
+<html>
     <head>
         <meta charset="utf-8">
         <title>Venture Hacks 2016</title>
@@ -14,12 +14,13 @@
     </head>
     <!-- Controllers: they contain the logic for a html section.
                You can have multiple controllers nested inside of each other. -->
-    <body ng-controller="houndTweetController">
+    <body>
         <div id="background"></div>
 
-        <div id="main" class="container" >
-
+        <div id="main" class="container">
+            <!-- More to come here! -->
         </div>
+        <!-- And here! -->
 
         <!-- Load all of our scripts ! -->
         <!-- The main -->
